<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="isIgnoringBatteryOptimizations"
            type="Boolean" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="14.0dip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/RtSettingsTextDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rt_kill_protect_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/RtSettingsTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/rt_battery_opt_settings_title" />

                <TextView
                    style="@style/RtSettingsTextDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/rt_power_save_settings_description" />

                <TextView
                    android:id="@+id/btnRequireIgnoreBatteryOpt"
                    android:onClick="@{onClick}"
                    style="@style/RtSettingsMainButton"
                    android:text="@{isIgnoringBatteryOptimizations?@string/rt_battery_opt_close:@string/rt_battery_opt_enabled}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/RtSettingsTextTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24.0dip"
                    android:text="@string/rt_background_settings_title" />

                <TextView
                    android:id="@+id/tvBackgroundTip"
                    style="@style/RtSettingsTextDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6.0dip" />

                <TextView
                    android:id="@+id/btnBackground"
                    android:onClick="@{onClick}"
                    style="@style/RtSettingsMainButton"
                    android:text="@string/rt_quick_settings_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/RtSettingsTextTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24.0dip"
                    android:text="@string/rt_battery_settings_title" />

                <TextView
                    style="@style/RtSettingsTextDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4.0dip"
                    android:text="@string/rt_battery_settings_description" />

                <TextView
                    android:id="@+id/tvSleepTip"
                    style="@style/RtSettingsTextDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6.0dip" />

                <TextView
                    android:id="@+id/btnSleep"
                    android:onClick="@{onClick}"
                    style="@style/RtSettingsMainButton"
                    android:text="@string/rt_quick_settings_sleep" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>